@@ -19,6 +19,8 @@ NOT: NON
 LIKE: COMME
 
 ## Fields
+filename: filename|file|fichier
 filetype: extension|ext
 content: contenu
-date: année|date|annee
+modified: année|date|annee|modifie
+language: lang|langue
