@@ -1,7 +1,0 @@
-require File.dirname(__FILE__) + '/../spec_helper'
-
-describe IndexReader do
-  before(:each) do
-    @index_reader = IndexReader.new
-  end
-end
