@@ -1,7 +1,0 @@
-require File.dirname(__FILE__) + '/../spec_helper'
-
-describe IndexWriter do
-  before(:each) do
-    @index_writer = IndexWriter.new
-  end
-end
