@@ -33,7 +33,7 @@
     <h1>Picolena</h1>
     <div id="version" class="clickable" onclick='document.location = "http://rubyforge.org/projects/picolena"; return false'>
       <p>Get Version</p>
-      <a href="http://rubyforge.org/projects/picolena" class="numbers">0.1.4</a>
+      <a href="http://rubyforge.org/projects/picolena" class="numbers">0.1.5</a>
     </div>
     <h1>&#x2192; &#8216;picolena&#8217;</h1>
 
@@ -114,7 +114,7 @@ ruby script/server</code></pre>
 
 	<p>Comments are welcome. Send an email to <a href="mailto:eric_duminil@rubyforge.org">Eric Duminil</a> email via the <a href="http://groups.google.com/group/picolena">forum</a></p>
     <p class="coda">
-      <a href="eric_duminil@rubyforge.org">Eric DUMINIL</a>, 9th April 2008<br>
+      <a href="eric_duminil@rubyforge.org">Eric DUMINIL</a>, 20th April 2008<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>,
       by Daniel Cadenas via <a href="http://depgraph.rubyforge.org/">DepGraph</a>
     </p>
